<resources>
    <string name="app_name">Cocina Rapida</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tecnicas">tecnicas</string>
    <string name="action_contactus">Contactanos</string>
    <string name="tv_ingredients">Ingredientes</string>
    <string name="substitutes">Sustitutos</string>
    <string name="preparation">Preparacion</string>
    <string name="cuadro_leche_ev_250">1 Cuadro 250ml de leche evaporada</string>
    <string name="mantequilla_1_4">¼ De mantequilla</string>
    <string name="papas_medianas_4">4 Papas medianas</string>
    <string name="champinones_250">250g De champiñones</string>
    <string name="tazas_agua_4">4 Tazas de agua</string>
    <string name="clado_pollo_cucharada_4">1 Cucharada de caldo de pollo en polvo</string>
    <string name="taza_leche">1 Taza de leche</string>
    <string name="pure_papa_des">puré de papa deshidratado</string>
    <string name="lata_champinones_rev_2pz">2 latas de champiñones rebanados</string>
    <string name="crema_champinones_preparation">
        1- Pon a cocer las papas (ir básicos de la cocina)\n\n
        2- En una olla pon la mantequilla junto con los champiñones y saltea a fuego bajo.\n\n
        3- Agrega a la licuadora los champiñones salteados junto con el resto de los ingredientes.\n\n
        4- Vierte la crema en una olla y calienta a "fuego medio" hasta que hierva. Mueve la crema de vez en cuando para que no se queme \n\n
        5- Sirve.</string>
    <string name="sal_gusto">Sal al gusto</string>
    <string name="bolsa_sop_fideos">1 bolsa de sopa de fideos</string>
    <string name="aceite">aceite</string>
    <string name="pure_sazonado_tetrapack">500ml de pure sazonado en tetrapack</string>
    <string name="caldo_pollo">caldo de pollo</string>
    <string name="caldo_pollo_tp">caldo de pollo en Tetapack</string>
    <string name="prep_sop_fideos">
        1- En una olla calienta el aceite a fuego medio y agrega los fideos.\n\n
        2- Mueve los fideos con una pala hasta que logren un color tostado uniforme (si dejas de mover se pueden quemar).\n\n
        3- Cuando el fideo haya cambiado de color agrega el caldo de pollo y el pure de tomate.\n\n
        4- Cocina hasta que el fideo tenga consistencia suave.\n\n
        5- Sirve</string>
    <string name="piernas_pollo_4">4 piernas de pollo</string>
    <string name="muslos_pollo_4">4 muslos de pollo</string>
    <string name="zanahorias_4">4 zanahorias</string>
    <string name="chayotes_2">2 chayotes</string>
    <string name="papas_2">2 papas grandes</string>
    <string name="brocoli">1 brócoli</string>
    <string name="calabazas_4">4 calabazas</string>
    <string name="cebolla">1 cebolla</string>
    <string name="dientes_ajo_2">2 dientes de ajo</string>
    <string name="manojo_cilantro">un manojo de cilantro</string>
    <string name="sal_grano">sal de grano</string>
    <string name="optional">Opcionales</string>
    <string name="vegetales_congelados">- Bolsa de vegetales congelados</string>
    <string name="caldo_pollo_preparation">
        1- En una olla grande agrega el pollo con los dientes de ajo, media cebolla, el manojo de cilantro, dos cucharadas de sal de grano, zanahorias en trozos, papas en trozos, brócoli en trozos y chayote en trozos.\n\n
        2- Llena la olla de agua hasta cubrir el pollo y las verduras , calienta hasta hervir, dejá hervir 20 min (o bien en una olla express electrica deja 16 min y libera la presión.\n\n
        3- Cuando las papas y las zanahorias estén suaves, agrega la calabaza en trozos, mueve (para que la calabaza se sumerja en el caldo hirviendo. Deja hervir otros 5 min.\n\n
        4- Sirve.</string>
    <string name="cucharadas_aceite_2">2 cucharadas de aceite</string>
    <string name="cebolla_1_4">¼ de cebolla</string>
    <string name="ajos_2">2 ajos</string>
    <string name="verdolagas">verdolagas</string>
    <string name="jitomates_3">3 jitomates</string>
    <string name="tazas_caldo_pollo">4 Tazas de caldo de pollo (Natural o Tetrapack)</string>
    <string name="chile_guajillo_1">1 chile guajillo</string>
    <string name="pure_tomate_tp">1 litro de pure de tomate condimentado</string>
    <string name="sopa_verdeolagas_preparation">
        1- Calienta el aceite en una olla a fuego medio, fríe la cebolla hasta que quede transparente, añade el ajo, las verdolagas lavadas y desinfectadas ( ir a básicos) y las papas.\n\n
        2- Cocina hasta que veas las papas doraditas por fuera.\n\n 3 - Licua los tomates (o una taza de puré de tomate con el chile guajillo.\n\n
        4- Agrega lo licuado a la olla junto con las 4 tazas de caldo de pollo y agrega sal al gusto.\n\n
        5- Deja hervir hasta que las papas estén blanditas.\n\n
        6- Sirve caliente (puedes poner un chile chipotle para agregar sabor a tu plato)</string>
    <string name="cebolla_blanca_picada_1">1 cebolla blanca mediana </string>
    <string name="cucharada_tomillo_seco_1_2">½ cucharada de tomillo seco</string>
    <string name="oregano">orégano</string>
    <string name="pure_tomate_2_tazas">2 tazas de puré de tomate</string>
    <string name="caldo_pollo_4_tazas">4 tazas de caldo de pollo (Natural o Tetrapack)</string>
    <string name="col_picada_4_tazas">4 tazas de col picada</string>
    <string name="vara_apio_1">1 vara de apio</string>
    <string name="zanahoria_pelada_1">1 zanahoria pelada</string>
    <string name="sal_pimineta_gusto">sal y pimienta al gusto</string>
    <string name="sopa_col_preparation">
        1- En una olla a fuego medio coloca un chorrito de aceite y saltea el ajo y la cebolla.\n\n
        2- Después de 3 min agrega la zanahoria y el apio picado en trozos pequeños.\n\n
        3- Agrega el orégano, el tomillo, la sal y la pimienta y cocina por 8 minutos.\n\n
        4- Agrega el puré de tomate, la col y el caldo de verduras o caldo pollo y espera a que empiece a hervir. Deja hervir 10 minutos\n\n
        5- Sirve</string>
    <string name="habas_400g">400g de habas</string>
    <string name="papa_mediana_3">3 papas medianas</string>
    <string name="zanahorias_2">2 zanahorias</string>
    <string name="cebolla_1">1 cebolla</string>
    <string name="agua_1l">1 litro de agua</string>
    <string name="caldo_pollo_polvo_1cda">1 cucharada de caldo de pollo en polvo</string>
    <string name="pure_papa_dht">puré de papa deshidratado</string>
    <string name="crema_habas_preparation">
        1– Rebana las zanahorias, las papas y la cebolla en trozos medianos.\n\n
        2- En una cacerola con un poco de aceite, sofríe la cebolla y las zanahorias.\n\n
        3- Cuando la cebolla esté transparente agrega las papas.\n\n
        4- Ya que las papas se vean un poco blandas agrega el litro de agua y añade las habas, salpimienta al gusto.\n\n
        5- Deja que hierba de 20 á 25 min hasta que las habas cambien de verde brillante a un verde opaco.\n\n
        6- Agrega todo a la licuadora con una cucharada o un cubo de caldo de pollo.\n\n
        7- Sirve, puedes acompañar con jamón o crutones.</string>
    <string name="papas_medianas_3">3 papas medianas</string>
    <string name="aceite_oliva_cda">1 cucharada de aceite de oliva</string>
    <string name="poro_rodajas_1">1 poro en rodajas finas</string>
    <string name="jitomates_2">2 jitomates</string>
    <string name="ajo_1">1 diente de ajo</string>
    <string name="caldo_pollo_1_1_2">1 ½ litros de caldo de pollo</string>
    <string name="sopa_poro_preparation">
        1- Calienta el aceite a fuego medio en una olla y sofríe el poro por dos minutos, mueve de vez en cuando.\n\n
        2- Licua el jitomate con el ajo, ½ litro de caldo de pollo (básicos de la cocina) y sal, cuando esté todo homogéneo viértelo en la olla.\n\n
        3- Cuando empiece a hervir agrega las papas en cubos pequeños y el resto del caldo de pollo.\n\n
        4- Cuando empiece a hervir de nuevo, deja cocinar a fuego bajo hasta que las papas estén suaves, agrega la pimienta y sirve caliente.</string>
    <string name="ejemplo_1">Sustitutos</string>
    <string name="manojo_espinacas">un manojo de espinacas</string>
    <string name="leche_evaporada_250ml">250ml de leche evaporada</string>
    <string name="taza_leche_1">1 taza de leche</string>
    <string name="caldo_pollo_1_2l">½ litro de caldo de pollo</string>
    <string name="mantequilla_2_cda">2 cucharadas de mantequilla</string>
    <string name="caldo_pollo_polvo_1_2_cda">½ cucharada de caldo de pollo en polvo</string>
    <string name="espinacas_bolsa">espinacas en bolsa</string>
    <string name="crema_espinacas_preparation">
        1- Desinfecta las espinacas (ir básicos de cocina) si tienes espinacas en bolsa puedes saltarte este paso.\n\n
        2- En una olla pone a derretir la mantequilla.\n\n
        3- Licua las espinacas, la leche evaporada, las 3 papas cocidas en cubos pequeños, la leche y el ½ litro de caldo de pollo. (Si no cabe todo en el vaso de la licuadora, licua por partes).\n\n
        4- Vacia la mezcla de la licuadora a la olla que tiene la mantequilla derretida.\n\n
        5- Mezcla hasta que tenga un color homogéneo.\n\n
        6- Deja hervir a fuego medio 15 minutos.\n\n
        7- Sirve.</string>
    <string name="mezcla_verduras_500g">500g mezcla de verduras de tu elección</string>
    <string name="mezcla_verduras_congeladas">mezcla de verduras congeladas</string>
    <string name="ajos_picados_frasco">ajos picados en frasco</string>
    <string name="crema_verduras_preparation">

        1- En una olla a fuego medio agrega el caldo de pollo con la cebolla, el ajo y deja hervir.\n\n
        2- Cuando empiece a hervir el caldo de pollo agrega las verduras de tu preferencia (si ya tienes las verduras cocidas puedes saltarte éste paso)\n\n
        3- En la licuadora mezcla el caldo de pollo (con ajo y cebolla), las papas, la leche evaporada y las verduras (Si no cabe todo en el vaso de la licuadora podemos licuar por partes)\n\n
        4- Vacía en la olla, mezcla hasta que sea de un color homogéneo.\n\n
        5- Cuando empiece a hervir, apaga y sirve.</string>
    <string name="piernas_pollo_sin_piel_2">2 piernas de pollo sin piel</string>
    <string name="spaghetti_500g">500g de spaghetti</string>
    <string name="spaghetti_pesto_substitute">- Salsa pesto en frasco</string>
    <string name="ensalada_campesina">ensalada Campesina</string>
    <string name="title_panque_avena">Panqué de Avena</string>
    <string name="hint_description">Añadir Nota</string>
    <string name="notes_pending">Pendientes:</string>
    <string name="notes_finished">Terminadas:</string>
    <string name="shoppinglist_instructions">Manten precionado un ingrediente de tu receta para agregar a la lista de compras</string>
    <string name="title_panque_platano_taza">Panque de platano en taza</string>
    <string name="title_cheesecake_frutos_rojos">Cheesecake de frutops rojos</string>
    <string name="title_tarta_queso_microondas">Tarta de queso para microondas</string>
    <string name="title_carlota_limon">Carlota de limon</string>
    <string name="title_cheesecake_mango_taza">Cheesecake de mango en Taza</string>
    <string name="title_arroz_leche">Arroz con Leche</string>
    <string name="title_budin_pan">Budin de Pan</string>
    <string name="title_panque_zanahoria_taza">Panque de Zanahoria en Taza</string>
    <string name="title_rol_canela_taza">Rol de Canela en Taza</string>
    <string name="title_crumble_manzana_taza">Crumble de Manzana en Taza</string>
    <string name="title_pastel_tres_leches_taza">Pastel de Tres Leches en Taza</string>
    <string name="title_galletas_microondas">Galletas de Microondas</string>
    <string name="title_agua_jamaica_natural">Agua de Jamaica Natural</string>
    <string name="title_limonada_frutos_rojos">Limonada de Frutos Rojos</string>
    <string name="title_latte_fresa_te_verde">Latte de Fresa y Te Verde</string>
</resources>