<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/fondo_amarillo"
    tools:context=".RecipeTemplateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_Recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image"
            android:adjustViewBounds="true"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#E81212"
            android:textSize="28sp"
            android:gravity="center"
            android:text="@string/tv_ingredients"/>

        <TextView
            android:id="@+id/ingredient_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/cuadro_leche_ev_250"/>
        <TextView
            android:id="@+id/ingredient_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/mantequilla_1_4"/>
        <TextView
            android:id="@+id/ingredient_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/papas_medianas_4"/>
        <TextView
            android:id="@+id/ingredient_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/champinones_250"/>
        <TextView
            android:id="@+id/ingredient_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/tazas_agua_4"/>
        <TextView
            android:id="@+id/ingredient_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/clado_pollo_cucharada_4"/>
        <TextView
            android:id="@+id/ingredient_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/taza_leche"/>
        <TextView
            android:id="@+id/ingredient_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"/>
        <TextView
            android:id="@+id/ingredient_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"/>
        <TextView
            android:id="@+id/ingredient_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"/>


    </LinearLayout>

</ScrollView>