<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notas_fondo_2"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".ShoppingListActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/description_max_length"
                android:hint="@string/hint_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/description_max_length"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingBottom="16dp"
            android:textStyle="italic"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:text="@string/shoppinglist_instructions"
            android:paddingHorizontal="@dimen/common_padding_default"/>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes_pending"
                    android:paddingHorizontal="@dimen/common_padding_default"
                    android:textAppearance="?attr/textAppearanceOverline" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_note"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes_finished"
                    android:paddingHorizontal="@dimen/common_padding_default"
                    android:textAppearance="?attr/textAppearanceOverline" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNotesFinished"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_note"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    </LinearLayout>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/share_mail"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|end"-->
<!--        android:layout_margin="16dp"-->
<!--        android:src="@drawable/ic_share"/>-->


</androidx.coordinatorlayout.widget.CoordinatorLayout>

